<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingTop="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:padding="12dp"
            app:icon="@drawable/arrow_back"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:paddingTop="10dp"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/YP_black"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16sp"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:text="@string/dark_Theme"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/share"
            android:paddingHorizontal="16sp"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:text="@string/share"
            android:textColor="@color/blackFigma"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/support"
            android:paddingHorizontal="16sp"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:text="@string/support"
            android:textColor="@color/blackFigma"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/arrow_forward"
            android:paddingHorizontal="16sp"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:text="@string/agreement"
            android:textColor="@color/blackFigma"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>

