<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3772E7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:text="@string/title_name"
            android:textColor="@color/white"
            android:textSize="26sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/button_Search"
            android:textAllCaps="false"
            android:textColor="@color/YP_black"
            android:textSize="26sp"
            app:icon="@drawable/light_mode"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_black" />

        <Button
            android:id="@+id/buttonMedia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingVertical="8dp"
            android:text="@string/button_Media"
            android:textAllCaps="false"
            android:textColor="@color/YP_black"
            android:textSize="26sp"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_black" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:paddingTop="8dp"
            android:text="@string/button_Settings"
            android:textAllCaps="false"
            android:textColor="@color/YP_black"
            android:textSize="26sp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconTint="@color/YP_black" />

    </LinearLayout>

</LinearLayout>